[package]
name = "apt-parser"
authors = ["Aarnav Tale <aarnav@tale.me>"]
version = "1.0.6"
description = "A parser for the APT package manager's package lists"
readme = "README.md"
homepage = "https://github.com/cnstr/apt-parser#readme"
repository = "https://github.com/cnstr/apt-parser"
license = "MIT"
edition = "2021"
rust-version = "1.56"
keywords = ["apt", "parser", "package", "list", "debian"]
categories = ["parsing", "text-processing"]
exclude = ["/.vscode", "/test", "/target", ".gitignore", ".rustfmt.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
regex = "1.7.1"
